# SAGE-Kit

./: .gitattributes  .gitignore  LICENSE  README.md  README.zh-CN.md  pyproject.toml  rebuild.md  sagekit.cmd
docs/: ACTIVE_CONTEXT_TEMPLATE.md  APPROVAL_GATES_TEMPLATE.md  DOC_ROUTING_TEMPLATE.md  ENGINEERING_SYSTEM_TEMPLATE.md  PROJECT_PROFILE_TEMPLATE.md  QUALITY_GATES_TEMPLATE.md  SAGE_CORE.md  SPEC_CORE.md
sagekit/: __init__.py  candidate.py  change_control.py  check.py  cli.py  compatibility.py  continuity.py  convergence.py  doctor.py  evidence.py  execution_documents.py  execution_limits.py  findings.py  graph_contract.py  graph_normalization.py  harness.py  init.py  managed_execution.py  milestone_scope.py  modes.py  normalization.py  packet.py  pathing.py  policy_resolution.py  process_supervisor.py  ready_resolver.py  reporting.py  resource_cli.py  resource_governor.py  resource_policy.py  review.py  runtime_recovery.py  runtime_store.py  runtime_views.py  spec_sources.py  task_dispatch_validator.py  test_node.py  test_runner.py  validation_scope_manifest.py  workspace_binding.py
scripts/: run_tests.py  validate_task_dispatch.py  wheel_smoke.py
tests/: test_active_scope.py  test_ci_workflow.py  test_claude_hooks.ps1  test_claude_hooks.sh  test_convergence_authority.py  test_execution_economy.py  test_frozen_contracts_and_containers.py  test_package_smoke.py  test_packet_compile.py  test_pathing.py  test_sagekit_check.py  test_sagekit_simulations.py  test_spec_sources.py  test_task_dispatch_validator.py  test_thin_documentation.py  test_thin_routing.py  (+4 more)
(+217 files in other folders)
