[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sagekit"
description = "Governance and evidence runtime for SAGE-Kit projects."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "JoeKeepGo" }
]
keywords = [
  "ai-agent",
  "governance",
  "specification",
  "validator",
  "software-engineering"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Quality Assurance"
]
dependencies = []
dynamic = ["version"]

[project.scripts]
sagekit = "sagekit.cli:main"

[tool.setuptools.packages.find]
include = ["sagekit*"]

[tool.setuptools.dynamic]
version = {attr = "sagekit.__version__"}

[tool.setuptools.package-data]
sagekit = ["resources/**/*"]
